Archive2/20/d44877e4a7a8c6/output
+ g++-4.9 -std=c++1y -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread main.cpp
main.cpp:18:6: error: use of deleted function ‘C::C(int)’
 C c{1};
      ^
main.cpp:12:14: note: ‘C::C(int)’ is implicitly deleted because the default definition would be ill-formed:
     using B::B;
              ^
main.cpp:12:14: error: use of deleted function ‘M::M()’
main.cpp:3:5: note: declared here
     M() = delete;  // Allowing this would work.
     ^
+ clang++ -std=c++1y -O0 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -stdlib=libc++ -pthread main.cpp -lsupc++
+ ./a.out
